# streamdeck-zoom-plugin

./: .gitignore  CMakeLists.txt  Makefile  README.md
Sources/: CMakeLists.txt  MacOS.mm  ZoomStreamDeckPlugin.cpp  main.cpp
sdPlugin/: manifest.json.cmake
